# CognitivePilot

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  constants.h  functions_h.h  mxm_data.txt  structures.h
include/: constants.h  functions.h  structures.h
src/: functions.cpp  main.cpp
